--- a/01-HTML-CSS/07-SCSS/Etan/style.scss
+++ b/01-HTML-CSS/07-SCSS/Etan/style.scss
@@ -1,38 +1,49 @@
 body {
     background-color: white;
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
 }
 
 .wrapper {
     display: grid;
-    position: absolute;
+    position: relative;
     top: 0;
     right: 0;
     width: 100vw;
-    height: 100%;
-    background-color: rgb(255, 255, 255);
+    height: 100vh;
+    background-color: rgb(202, 202, 202);
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(20, 1fr);
-
-    &-card {
+h1{
+    position: absolute;
+    font-size: 5vh;
+}
+    .card {
         position: relative;
-        background-color: rgb(255, 255, 255);
+        background-color: rgb(252, 255, 56);
         color: rgb(0, 0, 0);
-        box-sizing: border-box;
         border: 1px solid gray;
-        height: 25vh;
-        margin: 1vh;
+        border-radius: 3vw;
+        height: calc(33vh - 7.5vh);
+        width: calc(30vw - 3vw);
+        float: left;
 
         &:hover {
             cursor: pointer;
         }
-
+        video{
+            border-radius: 3vw;
+            width: 100%;
+        }
         img {
             position: absolute;
-            top: 0;
+            top: 5vh;
             left: 0;
+            border-radius: 3vw;
             align-items: center;
-            height: fit-content;
-            width: fit-content;
+            height: 20vh;
+            width: 20vw;
         }
 
         h1 {
@@ -44,27 +55,12 @@ body {
             font-weight: 100;
         }
 
-        p {x
+        p {
             color: red;
             position: absolute;
-            bottom: 0;
+            top: 0;
             font-family: Arial, Helvetica, sans-serif;
+            font-size: 2vh;
         }
-
-    }
-    .header1{
-        background-color: green;
-        grid-column: span 4;
-        grid-row: span 2;
-    }
-    .header2{
-        background-color: rgb(255, 187, 0);
-        grid-column: span 4; 
-        grid-row-start: 3;
-        grid-row-end: 6;
-    }
-    .header3{
-        background-color: rgb(211, 195, 106);
-        grid-column: span 4;
     }
 }
