--- a/01-HTML-CSS/07-SCSS/Gaming-Website(Rasheed)/style.scss
+++ b/01-HTML-CSS/07-SCSS/Gaming-Website(Rasheed)/style.scss
@@ -74,12 +74,13 @@ img {
     display: grid;
     grid-gap: 20px;
     grid-template-areas: 'header header top-box-a''header header top-box-b';
+
 }
 
 .header {
     grid-area: header;
     min-height: 400px;
-    background: url(https://wallpapercave.com/wp/wp4850012.jpg);
+    background: url(https://media2.giphy.com/media/W05iUdqyFujrRFgnn1/giphy.gif?cid=ecf05e474tadshy6zl4kjhl8w9eji5omjcf5ud46ub7rosv3&rid=giphy.gif&ct=g);
     background-size: cover;
     background-position: center;
     padding: 3rem;
@@ -96,7 +97,7 @@ img {
 
 
         &:hover {
-            color: red;
+            color: gray;
         }
 
     }
@@ -107,7 +108,7 @@ img {
         color: rgb(255, 249, 249);
 
         &:hover {
-            color: red;
+            color: gray;
         }
     }
 }
@@ -119,6 +120,10 @@ img {
     justify-items: center;
     box-shadow: 0 1px 5px rgba(54, 54, 54, 0.8);
     padding: 1.5rem;
+
+    &:hover{
+        transform: scale(0.9);
+    }
 
     &__h4 {
         font-size: 2rem;
@@ -141,6 +146,10 @@ img {
         text-align: center;
         padding: 1.5rem 2rem;
         box-shadow: 0 1px 5px rgba(54, 54, 54, 0.8);
+
+    &:hover{
+        transition: 0.8s;
+        opacity: 0.5;}
     }
 }
 
