--- a/01-HTML-CSS/07-SCSS/Gaming-Website(Rasheed)/style.scss
+++ b/01-HTML-CSS/07-SCSS/Gaming-Website(Rasheed)/style.scss
@@ -57,6 +57,7 @@ img {
         text-transform: uppercase;
         font-size: 1.1rem;
         box-shadow: 0 1px 5px rgb(104, 104, 104, 0.8);
+        cursor: pointer;
 
         &:hover {
             background: rgb(0, 0, 0);
@@ -94,6 +95,7 @@ img {
         font-size: 4rem;
         margin-bottom: 0px;
         color: rgb(255, 249, 249);
+        cursor: pointer;
 
 
         &:hover {
@@ -106,6 +108,7 @@ img {
         font-size: 1.3rem;
         margin-top: 0px;
         color: rgb(255, 249, 249);
+        cursor: pointer;
 
         &:hover {
             color: gray;
@@ -146,6 +149,7 @@ img {
         text-align: center;
         padding: 1.5rem 2rem;
         box-shadow: 0 1px 5px rgba(54, 54, 54, 0.8);
+        cursor: pointer;
 
     &:hover{
         transition: 0.8s;
