--- a/01-HTML-CSS/07-SCSS/Roi/style.scss
+++ b/01-HTML-CSS/07-SCSS/Roi/style.scss
@@ -2,23 +2,40 @@ body {
     background-color: black;
     font-family:Arial, Helvetica, sans-serif;
 }
+.MainWrapper {
+    width: 90vw;
+    height: 50vh;
+    border: 1px solid white;
+    position: absolute;
+    right:0;
+    top:0;
+    border-radius: 10px;
+
+}
 .SideWrapper {
-width: 10vw;
+width: 200px;
 height: 100vh;
 border-radius: 10px;
-background-color:rgb(49, 47, 47);
-}
-
-    .SideWrapperMenu {
-        width: 10vw;
-        height: 500px;
-        border: 1px solid white;
-        display: flex;
+//border:1px solid white;
+background-color: rgb(39, 37, 37);
+    &__Menu {
+        height: 250px;
+        //border: 1px solid red;
+        display:flex;
         flex-direction: column;
-        &__item {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-
+        flex: 0 0 10vw;
+        &__item >img {
+            width: 140px;
+            height: 50px;
         }
+        &__item {
+            height: 50px;
+            display:flex;
+            justify-content: left;
+            padding-left: 25px;
+            align-items: center;
+            //border: 1px solid blue;
+            color: white;
+        }
+    }
 }
