--- a/01-HTML-CSS/07-SCSS/Andrew/homework/style.scss
+++ b/01-HTML-CSS/07-SCSS/Andrew/homework/style.scss
@@ -1,14 +1,16 @@
-h1{
-    color: white;
-}
 body{
     font-family: Arial, Helvetica, sans-serif;
     background-image: url(https://cdn.wallpapersafari.com/14/77/r3uDHJ.jpg);
     background-size: cover;
 }
+.flex{
+    display: flex;
+    justify-content: center;
+}
 .header{
     background-color: #680747;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
     &_logo{
@@ -18,7 +20,7 @@ body{
     }
     &_item{
         text-shadow: 0.3rem 0.3rem 0.4rem #141010;
-            :hover{
+            &:hover{
             cursor: pointer;
         }
     }
@@ -27,34 +29,44 @@ body{
         font-size: 2.5rem;
     }
 }
+
 .mainGrid{
     display: grid;
     grid-template-columns: repeat(1, 4fr 1fr 3fr 3fr);
     grid-template-rows: repeat(1, 2fr 1fr 1fr);
     gap: 15px;
     padding: 15px;
-    width: 90vw;
+    width: 70vw;
+    height: 50vw;
     color: rgb(235, 235, 235);
     div{
         border-radius: 15px;
         box-shadow: 5px 5px 5px black;
+        transition: 0.3s ease;
+        &:hover{
+            cursor: pointer;
+            transform: scale(1.05);
+            animation: pulse 0.6s infinite;
+            box-shadow: 0 0 0 2em rgba(#fff,0);
+        }
     }
     &_largeText{
         background-color: #c7005d;
         grid-column: 1 / 2;
         grid-row: 1 / 2;
         padding: 1rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         &_png{
-            img{
                 width: 20rem;
-            }
         }
         &_title{
             font-size: 2rem;
             font-weight: bold;
         }
         &_text{
-            font-size: 1rem;
+            font-size: 1.3rem;
         }
     }
     &_largeImg{
@@ -102,21 +114,115 @@ body{
     }
 }
 .banner{
-	height: 242px;
-	width: 9000px;
-	margin-bottom: 80px;
-    &_first{
-        animation: scroll 50s linear infinite;
-    }
-    img{
-        height: 200px;
+    overflow: hidden;
+    &_strip{
+	    height: 200px;
+	    width: 6000px;
+        padding: 20px;
+        border-block: 5px solid black;
+        background-color: #c7005d;
+        &_first{
+            animation: scroll 40s linear infinite;
+        }
+        img{
+            height: 200px;
+            transition: 0.5s ease;
+            &:hover{
+                transform: scale(1.1);
+                cursor: pointer;
+                box-shadow: 0px 0px 6px 3px #ffffff, 0px 0px 20px 20px #c7005d;
+            }
+        }
     }
 }
+
+.games{
+    display: flex;
+    justify-content: center;
+    padding-block: 150px;
+    .big{
+        height: 630px;
+        width: 450px;
+    }
+    &_gridLeft{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+        transform: perspective(600px) rotateY(10deg);
+        gap: 30px;
+        img{
+            height: 300px;
+            width: 210px;
+        }
+        :nth-child(13){
+            grid-column: 3 / 5;
+            grid-row: 2 / 4;
+        }
+        :nth-child(9){
+            grid-column: 1 / 3;
+            grid-row: 3 / 5;
+        }
+    }
+    &_gridRight{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+        transform: perspective(600px) rotateY(-10deg);
+        gap: 30px;
+        img{
+            height: 300px;
+            width: 210px;
+        }
+        :nth-child(1){
+            grid-column: 2 / 4;
+            grid-row: 1 / 3;
+        }
+        :nth-child(3){
+            grid-column: 2 / 4;
+            grid-row: 4 / 6;
+        }
+    }
+    .games_grid_item{
+        box-shadow: 0px 0px 10px 5px #c7005d;
+        transition: 0.2s ease;
+        &:hover{
+            transform: perspective(200px) rotateX(-5deg) translateY(-60px) scale(1.1);
+            cursor: pointer;
+        }
+    }
+    
+}
+
+.footer{
+    background-color: #800958;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    &_info{
+        &_text{
+            display: flex;
+            justify-content: space-around;
+            width: 50ch;
+            font-size: 1.5rem;
+            color: rgb(235, 235, 235);
+        }
+        &_signiture{
+            display: flex;
+            justify-content: center;
+            font-size: 2rem;
+            color: #afafaf;
+            font-weight: 700;
+        }
+    }
+}
+
 @keyframes scroll {
- 0%{
-    margin-left: 0px;
- }
- 100%{
-    margin-left: -5746px;
- }
+    0% { margin-left: 0px; }
+    100% { margin-left: -2000px; }
+}
+
+@keyframes pulse {
+    0% { box-shadow: 0 0 0 0 #ffffff; }
 }
