--- a/01-HTML-CSS/07-SCSS/Lior_Krasnopolski/Gaming_Lior.scss
+++ b/01-HTML-CSS/07-SCSS/Lior_Krasnopolski/Gaming_Lior.scss
@@ -2,7 +2,7 @@ body
 {
     background-size: cover;
     background-repeat: no-repeat;
-    background: rgb(114, 140, 255);
+    background: rgb(29, 31, 41);
     height: 150vh;
     margin:50px;
     padding-right: 10em;
@@ -189,7 +189,7 @@ h4
 .banner {
     width: 100%;
     height: 4vh;
-    background-color: rgb(114, 140, 255);
+    background-color: rgb(29, 31, 41);
     background-size: cover;
     background-position: center;
     text-align: center;
@@ -242,7 +242,7 @@ h4
         top: -1vh;
         transform: translate(-50%, -50%);
         transition: 10s;
-        background: rgb(114, 140, 255);
+        background: rgb(29, 31, 41);
         height: 30px;
         width: 15vw;
   
@@ -268,13 +268,66 @@ h4
     }
   }
 
-
-  .game_1
+  .game
   {
-      background: chartreuse;
-      background-repeat: no-repeat;
-      background-size: cover;
+    background-repeat: no-repeat;
+    background-size: cover;
+    
+    &_1
+    {
+        background: url(https://wallpapercave.com/dwp1x/AIVAsqC.jpg);
+
+    }
+  
+    &_2
+    {
+        background: url(https://images3.alphacoders.com/843/thumbbig-843016.webp);
+
+    }
+    &_3
+    {
+        background: url(https://c4.wallpaperflare.com/wallpaper/374/201/282/soldiers-call-of-duty-call-of-duty-modern-warfare-ghost-cod6-2560x1440-architecture-modern-hd-art-wallpaper-preview.jpg);
+
+    }
+    &_4
+    {
+        background: url(https://images.unsplash.com/photo-1623476408624-721c9185d569?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTN8fHN0YXIlMjB3YXJzfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60);
+
+    }
+    &_5
+    {
+        background: url(https://wallpapercave.com/dwp1x/AIVAsqC.jpg);
+
+    }
+
+    &_6
+    {
+        background: url(https://wallpapercave.com/dwp1x/AIVAsqC.jpg);
+
+    }
+
+    &_7
+    {
+        background: url(https://wallpapercave.com/dwp1x/AIVAsqC.jpg);
+
+    }
+
+    &_8
+    {
+        background: url(https://wallpapercave.com/dwp1x/AIVAsqC.jpg);
+
+    }
+
+    &_5
+    {
+        background: url(https://wallpapercave.com/dwp1x/AIVAsqC.jpg);
+
+    }
+
+    
   }
+ 
+
 
 
  
