--- a/01-HTML-CSS/07-SCSS/chaim/style.scss
+++ b/01-HTML-CSS/07-SCSS/chaim/style.scss
@@ -3,30 +3,40 @@ body{
     color: rosybrown;
 }
 .wrapper{
-    display: flex;
-    background-color: white;
-    width: 100%;
-    height: 100%;
-    justify-self: start;
+    display: grid;
+    justify-content: center;
+     font-family: 'Roboto Condensed', sans-serif;
+     color: blanchedalmond;
+    width: 200px;
+    height: 200px;
+    grid-template-columns: 220px  150px 150px 150px 150px 150px 150px 150px;
+    grid-template-rows: 15vh 30vh 15vh 15vh;
+    row-gap: 1fh;
+    column-gap: 1vh;
     position: relative;
-    top: 40px;
+    left: 600px;
 
 &__card{
         color: red;
     }
 
+
+
 &__card{
     background-color: aqua;
     color: seagreen;
-    width: 200px;
-    height: 200px;
+    width: 100px;
+    height: 100px;
      border-radius: 10px;
-}
+     }
+
 img{
-    width: 200px;
-    height: 200px;
-    top: 50px;
-    flex: var(1fr);
+    width: 100%;
+    height: fit-content;
+    position: relative;
+    top: 100px;
+    left: 80px;
+    display: grid;
 }
 
 
@@ -36,18 +46,12 @@ img:hover{
     cursor: pointer;
 }
 
-
 p{
     text-align: var(10px);
     font-size: var(1fr);
     position: relative;
-    bottom: 30%;
-    right: 130px;
-}
-.card{
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(10 vh);
-    gap:var(10px);
+    top: 70px;
+    left: 90px;
+
 }
 }   
