--- a/01-HTML-CSS/07-SCSS/OmriAharonov/HomeTask/games.scss
+++ b/01-HTML-CSS/07-SCSS/OmriAharonov/HomeTask/games.scss
@@ -1,5 +1,6 @@
 body{
     margin: 0;
+    background: rgba(224, 215, 215, 0.89);
 }
 
 .navbar{
@@ -50,7 +51,7 @@ body{
         justify-content: space-evenly;
         width: 200px;
         height: 50px;
-        margin-left: 1300px;
+        margin-left: 1350px;
         margin-top: -50px;
         color: rgba(255, 255, 255, 0.753);
         align-items: center;
@@ -73,6 +74,8 @@ body{
     justify-content: center;
     text-align: start;
     gap: 5px;
+    font-family: 'Nunito', sans-serif;
+    font-style: italic;
 
     .highlight_head{
         grid-column: span 4;
@@ -80,9 +83,54 @@ body{
     }
     .highlight_banner{
         grid-column: span 4;
+
+        :hover{
+            cursor: pointer;
+        }
     }
     .highlight_games{
        display: grid;
+
+       :hover{
+        cursor: pointer;
+    }
     }
   
+}
+
+.whats_good{
+    position: relative;
+    width: 1100px;
+    height: 500px;
+    margin-left: 400px;
+    display: grid;
+    grid-template-columns: repeat(4 1fr);
+    grid-template-rows: 50px 200px 200px;
+    gap: 5px;
+    font-family: 'Nunito', sans-serif;
+    font-style: italic;
+
+    .games_head{
+        grid-column: span 4;
+        border-bottom: rgba(177, 174, 174, 0.76) solid 1px;
+    }
+
+    .games{
+        :hover{
+            cursor: pointer;
+        }
+    }
+
+    :nth-child(2){
+        grid-column: span 2;
+        grid-row: span 2;
+    }
+
+     :nth-child(5) , :nth-child(6){
+        
+        .text{
+            margin-top: 40px;
+        }
+    }
+   
 }
