--- a/01-HTML-CSS/07-SCSS/michaeldubovyk/style.scss
+++ b/01-HTML-CSS/07-SCSS/michaeldubovyk/style.scss
@@ -2,9 +2,9 @@ body{
 
     background-color: #222; 
     margin: 0px;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Bebas Neue', cursive;
     color: whitesmoke;
-
+    
 }
 
 .header{
@@ -30,7 +30,6 @@ body{
             margin-left: 1em;
 
         }
-
     }
 
     &__searchbar{
@@ -59,7 +58,6 @@ body{
             width: 22%;
             margin: 0.7em;
             
-
             img{
 
                 height: 80%;
@@ -72,7 +70,7 @@ body{
 
             &--u{
 
-                border: 2px solid whitesmoke;
+                border: 1px solid whitesmoke;
                 border-radius: 10px;
                 padding: 3px;
     
@@ -83,9 +81,7 @@ body{
                 cursor: pointer;
                 border: 1px solid rgb(168, 46, 46);
                 transition: border 0.85s;
-
             }
-
         }
 
         &__account{
@@ -122,10 +118,7 @@ body{
                         color: rgb(199, 41, 41);
 
                     }
-
                 }
-
-
             }
 
             .login{
@@ -137,55 +130,178 @@ body{
                 align-items: center;
 
             }
+        }
+    }
+}
+
+.menubar{
+
+    height: 180px;
+    display: flex;
+    justify-content: center;
+
+    &__cards{
+        
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 80%;
+        
+    }
+
+    .card{
+
+        background-color: rgb(53, 53, 53);
+        border: 2px solid #222;
+        box-shadow: 8px 8px 3px rgb(26, 26, 26);
+        border-radius: 15px;
+        width: 13%;
+        height: 60%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin: 5px;
+    
+        &:hover{
+    
+            cursor: pointer;
+            border: 2px solid rgb(192, 150, 36);
+            transition: border 0.8s;
+    
+        }
+    
+        img{
+    
+            height: 100%;
+            width: 40%;
+            border-top-left-radius: 15px;
+            border-bottom-left-radius: 15px;
+    
+        }
+    
+        p{
+    
+            width: 60%;
+            font-size: 20px;
+            display: flex;
+            justify-content: center;
+            padding: 3px;
+    
+        }  
+    
+    }
+
+    &__more{
+
+        width: 12%;
+        display: flex;
+        align-items: center;
+        font-size: 20px;
+
+       .morecard{
+
+            background-color: rgb(53, 53, 53);
+            border: 2px solid #222;
+            box-shadow: 8px 8px 3px rgb(26, 26, 26);
+            border-radius: 15px;
+            width: 100%;
+            height: 60%;
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            margin: 5px;
+
+            &:hover{
+
+                cursor: pointer;
+                transition: all 0.8s;
+                position: relative;
+                bottom: 20px;
+            
+            }
+
+            .moreicon{
+
+                width: 30%;
+
+                img{
+                height: 80%;
+                width: 60%;
+                }
+            }
+
+            .moretext{
+
+                h1 , p{
+                    margin: 0;
+                }
+            } 
+        }
+    }
+}
+
+.wrapper{
+
+    display: flex;
+    justify-content: center;
+    &__container{
+
+    margin-bottom: 20px;
+    width: 93%;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: 0.8fr 2fr 2fr;
+    gap: 1.5em;
+
+        .title{
+
+            font-size: 40px;
+            grid-column: 1/6;
+            grid-gap: 5px;
 
         }
 
+        .gamebox{
+
+            background-color: rgb(53, 53, 53);
+            border-radius: 15px;
+            display: grid;
+            grid-template-rows: 80% 20%;
+
+            img{
+
+                width: 100%;
+                height: 90%;
+                border-top-left-radius: 15px;
+                border-top-right-radius: 15px;
+                opacity: 0.2;
+
+                &:hover{
+                    opacity: 1;
+                    transition: 0.7s;
+                }
+
+            }
+
+            &:hover{
+                
+                cursor: pointer;
+
+            }
+
+
+            p{
+                
+                font-size: 25px;
+                font-weight: 500;
+                text-align: center;
+            }
+            
+        }
+
         
-
-
 
     }
 
 }
 
-.menubar{
-
-    height: 160px;
-    display: flex;
-    justify-content: center;
-
-        &__cards{
-        
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 90%;
-        
-        }
-
-        &__more{
-        
-        width: 10%;
-        
-        }
-
-        .card{
-
-        background-color: rgb(53, 53, 53);
-        border-radius: 20px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        }
-
-        img{
-
-            height: 100%;
-            width: 40%;
-            border-top-left-radius: 20px;
-            border-bottom-left-radius: 20px;
-
-        }
-
-}
