--- a/01-HTML-CSS/07-SCSS/Etan/style.scss
+++ b/01-HTML-CSS/07-SCSS/Etan/style.scss
@@ -14,22 +14,24 @@ body {
     height: 100vh;
     background-color: rgb(202, 202, 202);
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(20, 1fr);
+    grid-template-rows: repeat(4, 1fr);
 
     h1 {
-        position: absolute;
+        position: relative;
         font-size: 5vh;
+        grid-column: span 4;
+        padding-left: 50%;
     }
 
-    .card {
+    &__card {
         position: relative;
         background-color: rgb(252, 255, 56);
         color: rgb(0, 0, 0);
         border: 1px solid gray;
         border-radius: 3vw;
-        height: calc(33vh - 7.5vh);
-        width: calc(30vw - 3vw);
-        margin: 1vw;
+        height: 20vh;
+        width: 15vw;
+        margin: .5vw;
         float: left;
 
         &:hover {
@@ -54,7 +56,7 @@ body {
         h1 {
             position: absolute;
             color: rgb(25, 0, 255);
-            bottom: 10vh;
+            bottom: 0;
             font-family: Arial, Helvetica, sans-serif;
             font-size: 1vw;
             font-weight: 100;
@@ -63,7 +65,7 @@ body {
         p {
             color: red;
             position: absolute;
-            top: 0;
+            bottom: 0;
             font-family: Arial, Helvetica, sans-serif;
             font-size: 2vh;
         }
