--- a/01-HTML-CSS/07-SCSS/Etan/style.scss
+++ b/01-HTML-CSS/07-SCSS/Etan/style.scss
@@ -66,6 +66,7 @@ body {
             color: red;
             position: absolute;
             bottom: 0;
+            left: 1vw;
             font-family: Arial, Helvetica, sans-serif;
             font-size: 2vh;
         }
