--- a/01-HTML-CSS/07-SCSS/Lior_Krasnopolski/Gaming_Lior.scss
+++ b/01-HTML-CSS/07-SCSS/Lior_Krasnopolski/Gaming_Lior.scss
@@ -8,6 +8,23 @@ body
     padding-right: 10em;
 }
 
+.logo
+{
+  position: relative;
+  left: 270px;
+  border-radius: 100px;
+  width: 4.3vw;
+  height: 100px;
+  transition: 0.8s;
+
+  &:hover
+  {
+    transform: scale(1.3);
+    border: 3px solid white;
+
+  }
+}
+
 
 .container
 {
@@ -57,7 +74,7 @@ body
             display: inline-block;
             text-decoration: none;
             color: rgb(5, 3, 0);
-            background-color: greenyellow;
+            background-color: rgb(157, 197, 78);
             padding: 0.5em 1.25em;
             border-radius: 10px;
             transition: 1.2s;
@@ -89,7 +106,7 @@ body
             left: 0;
             bottom: 0;
             width: 100%;
-            background: greenyellow;
+            background: rgb(157, 197, 78);
         }
 
       
@@ -145,8 +162,6 @@ body
                 z-index: -1;
                 transition: 0.8s;
             }
-      
-
         } 
         }
         }
@@ -158,7 +173,7 @@ body
 h4
 {
     
-        color: yellowgreen;
+        color: rgb(147, 190, 61);
         position: relative;
         border: 3px solid rgb(248, 248, 248);
         bottom: 100px;
@@ -187,15 +202,18 @@ h4
 // the navbar
 
 .banner {
-    width: 100%;
+    width: 30%;
     height: 4vh;
     background-color: rgb(29, 31, 41);
     background-size: cover;
     background-position: center;
     text-align: center;
     font-weight: 200;
-    top: 0px;
+    top: -80px;
+    left: 19vw;
+    position: relative;
   
+
     &__navbar {
       width: 85%;
       margin: auto;
@@ -238,7 +256,7 @@ h4
   
       &__search_box {
         position: relative;
-        left: 57vw;
+        left: 26vw;
         top: -1vh;
         transform: translate(-50%, -50%);
         transition: 10s;
@@ -268,6 +286,17 @@ h4
     }
   }
 
+  .sport
+  {
+    position: relative;
+    bottom: 35vh;
+  }
+
+  .online
+  {
+    position: relative;
+    bottom: 75vh;
+  }
   .game
   {
     background-repeat: no-repeat;
@@ -276,6 +305,8 @@ h4
     &_1
     {
         background: url(https://wallpapercave.com/dwp1x/AIVAsqC.jpg);
+        grid-row-start: 2;
+        grid-row-end: 3;
 
     }
   
@@ -296,38 +327,100 @@ h4
     }
     &_5
     {
-        background: url(https://wallpapercave.com/dwp1x/AIVAsqC.jpg);
+        background: url(https://wallpapercave.com/dwp1x/wp1897912.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
 
     }
 
     &_6
     {
-        background: url(https://wallpapercave.com/dwp1x/AIVAsqC.jpg);
+        background: url(https://wallpapercave.com/wp/wp7246634.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+
 
     }
 
     &_7
     {
-        background: url(https://wallpapercave.com/dwp1x/AIVAsqC.jpg);
-
+        background: url(https://wallpapercave.com/wp/wp4346842.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+    
     }
 
     &_8
     {
-        background: url(https://wallpapercave.com/dwp1x/AIVAsqC.jpg);
-
+        background: url(https://wallpapercave.com/wp/wp3277470.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+    
     }
 
-    &_5
+
+    &_9
+
     {
-        background: url(https://wallpapercave.com/dwp1x/AIVAsqC.jpg);
+      background: url(https://wallpapercave.com/wp/wp6710684.jpg);
+      background-repeat: no-repeat;
+      background-size: cover;
+  
+  }
+  
+  &_10
+  {
+      background: url(https://wallpapercave.com/wp/wp9657826.jpg);
+      background-repeat: no-repeat;
+      background-size: cover;
 
-    }
+  }
 
+  &_11
+  {
+      background: url(https://thumbs.dreamstime.com/b/johan-gustafsson-ice-hockey-goalie-25087868.jpg);
+      background-repeat: no-repeat;
+      background-size: cover;
+  }
+
+  &_12
+  {
+      background: url(https://wallpapercave.com/wp/wp3533995.jpg);
+      background-repeat: no-repeat;
+      background-size: cover;
+  }
+  &_13
+  {
+      background: url(https://wallpapercave.com/wp/wp2454514.jpg);
+      background-repeat: no-repeat;
+      background-size: cover;
+
+  }
+  &_14
+  {
+      background: url(https://wallpapercave.com/wp/wp5281392.jpg);
+      background-repeat: no-repeat;
+      background-size: cover;
+
+  }
+  &_15
+  {
+      background: url(https://wallpapercave.com/wp/wp6369579.jpg);
+      background-repeat: no-repeat;
+      background-size: cover;
+
+  }
+
+  &_16
+  {
+      background: url(https://wallpapercave.com/wp/wp3596465.jpg);
+      background-repeat: no-repeat;
+      background-size: cover;
+
+
+  }
     
   }
  
-
-
 
  
