--- a/01-HTML-CSS/07-SCSS/Shani/Game website/style.scss
+++ b/01-HTML-CSS/07-SCSS/Shani/Game website/style.scss
@@ -25,7 +25,7 @@ body {
             
         }
 
-        button {
+        button   {
             border: 3px solid blue;
             background-color: rgb(144, 214, 238);
 
@@ -146,16 +146,87 @@ body {
         }
 
         &.multiplayer {
-            background-color: rgb(65, 236, 73);
-            border: 2px black solid;
+            background-color: rgb(194, 25, 143);
             grid-row-start: 6;
             grid-row-end: 9;
+
+            &.one {
+                grid-column-start: 1;
+                grid-column-end: 3;
+
+                h2 {
+                    padding-left: 100px;
+                    cursor: pointer;
+
+                    &:hover {
+                        text-shadow: rgb(243, 105, 255) 2px 2px;
+                    }
+                }
+
+
+            }
+
+            &.two {
+                grid-column-start: 3;
+                grid-column-end: 5;
+                padding-top: 70px;
+
+
+            }
+
+            &.three {
+                grid-column-start: 5;
+                grid-column-end: 7;
+                padding-top: 70px;
+
+
+            }
+            /*this is inorder to have the things change whenever i hover over them so the pic and text will change*/
+            .hover{
+                &:hover{
+                    cursor: pointer;
+                    opacity: 0.7;                  
+                    text-shadow: rgb(255, 123, 215) 2px 2px;
+
+
+                }
+            img {
+
+                width: 200px;
+                height: 20vh;
+                display: block;
+                margin: auto;
+                border-radius: 10px;
+                border: 2px solid rgb(247, 110, 206);
+
+                /*&:hover {
+                    cursor: pointer;
+                    opacity: 0.7;
+                    border: 4px solid rgb(147, 253, 112);
+                    box-shadow: 2px 5px 2px rgb(94, 255, 0);
+
+
+                }*/
+
+            }
+            p{
+                padding-left:170px;
+                cursor:pointer;
+               /* &:hover{
+                    text-shadow: rgb(148, 255, 105) 2px 2px;
+
+                }*/
+            }
+        }
+
+
+
 
         }
     }
 
     .popular {
-        background-color: rgb(194, 25, 143);
+        background-color: rgb(255, 133, 219);
         border: 2px black solid;
         grid-row-start: 9;
         grid-row-end: 11;
