--- a/01-HTML-CSS/07-SCSS/Lior_Krasnopolski/Gaming_Lior.scss
+++ b/01-HTML-CSS/07-SCSS/Lior_Krasnopolski/Gaming_Lior.scss
@@ -419,6 +419,68 @@ h4
 
 
   }
+
+  &_17
+  {
+      background: url(https://c4.wallpaperflare.com/wallpaper/32/804/961/spirit-blossom-yasuo-yasuo-league-of-legends-league-of-legends-riot-games-hd-wallpaper-preview.jpg);
+      background-repeat: no-repeat;
+      background-size: cover;
+  
+  }
+
+
+  &_18
+
+  {
+    background: url(https://wallpapercave.com/wp/wp1810702.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+
+}
+
+&_19
+{
+    background: url(https://wallpapercave.com/wp/wp4779599.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+
+}
+
+&_20
+{
+    background: url(https://wallpapercave.com/wp/wp8386786.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+&_21
+{
+    background: url(https://wallpapercave.com/dwp1x/wp6311484.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+&_22
+{
+    background: url(https://wallpapercave.com/fuwp/uwp465651.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+
+}
+&_23
+{
+    background: url(https://wallpapercave.com/wp/wp1840268.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+
+}
+&_24
+{
+    background: url(https://wallpapercave.com/wp/wp5795005.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+
+}
+
     
   }
  
