--- a/01-HTML-CSS/07-SCSS/Shani/Game website/style.scss
+++ b/01-HTML-CSS/07-SCSS/Shani/Game website/style.scss
@@ -8,36 +8,107 @@ body {
 
     display: grid;
     grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: repeat(10, 150px);
+    grid-template-rows: repeat(9, 150px);
 
     .header {
         background-color: rgb(47, 168, 209);
-        font-family: 'Architects Daughter', cursive;
-        padding-left: 20px;
         border: 2px black solid;
         grid-column-start: 1;
         grid-column-end: 7;
 
+
+        h1 {
+            display: block;
+            padding-left: 20px;
+            font-size: 300%;
+            text-shadow:
+                0 0 7px #fff,
+                0 0 10px #fff,
+                0 0 21px #fff,
+                0 0 42px rgb(0, 255, 242),
+                0 0 82px rgb(0, 255, 242),
+                0 0 92px rgb(0, 255, 242),
+                0 0 102px rgb(0, 255, 242),
+                0 0 151px rgb(0, 255, 242);
+
+
+        }
+
         input {
+            display: flex;
+            position: relative;
+            left: 29%;
+            bottom: 45%;
             width: 35%;
             height: 20%;
             border: 3px solid blue;
-            
+
         }
 
-        button   {
+        button[type=submit] {
             border: 3px solid blue;
             background-color: rgb(144, 214, 238);
+            display: flex;
+            position: relative;
+            left: 65%;
+            bottom: 65%;
+
+
+
+            &:hover {
+                background-color: rgb(8, 53, 68);
+                cursor: pointer;
+                color: white;
+                font-weight: bold;
+
+
+            }
+
+
+
 
         }
 
-        button:hover {
-            background-color: rgb(8, 53, 68);
-            cursor: pointer;
-            color: white;
 
 
+        button[type=register] {
+            border-radius: 10px;
+            border: 2px solid blue;
+            font-weight: bold;
+            color: rgb(12, 114, 12);
+            display: flex;
+            position: relative;
+            left: 75%;
+            bottom: 85%;
+
+            &:hover {
+                color: white;
+                cursor: pointer;
+                background-color: rgb(12, 114, 12);
+                transition: 1s;
+            }
         }
+
+        button[type=login] {
+            border-radius: 10px;
+            border: 2px solid blue;
+            font-weight: bold;
+            color: red;
+            display: flex;
+            position: relative;
+            left: 85%;
+            bottom: 99%;
+
+            &:hover {
+                color: white;
+                cursor: pointer;
+                background-color: red;
+                transition: 1s;
+            }
+        }
+
+
+
 
 
 
@@ -69,6 +140,10 @@ body {
                     }
                 }
 
+                p {
+                    margin-left: -50px;
+                }
+
 
             }
 
@@ -87,43 +162,37 @@ body {
 
 
             }
+
+            p {
+                padding-left: 170px;
+                cursor: pointer;
+                text-align: start;
+            }
+
             /*this is inorder to have the things change whenever i hover over them so the pic and text will change*/
-            .hover{
-                &:hover{
+            .hover {
+                &:hover {
                     cursor: pointer;
-                    opacity: 0.7; 
-                 
+                    opacity: 0.7;
+
                     text-shadow: rgb(148, 255, 105) 2px 2px;
 
 
                 }
-            img {
 
-                width: 200px;
-                height: 20vh;
-                display: block;
-                margin: auto;
-                border-radius: 10px;
-                border: 2px solid green;
+                img {
 
-                /*&:hover {
-                    cursor: pointer;
-                    opacity: 0.7;
-                    border: 4px solid rgb(147, 253, 112);
-                    box-shadow: 2px 5px 2px rgb(94, 255, 0);
+                    width: 200px;
+                    height: 20vh;
+                    display: block;
+                    margin: auto;
+                    border-radius: 10px;
+                    border: 2px solid green;
 
 
-                }*/
 
-            }
-            p{
-                padding-left:170px;
-                cursor:pointer;
-               /* &:hover{
-                    text-shadow: rgb(148, 255, 105) 2px 2px;
+                }
 
-                }*/
-            }
             }
 
 
@@ -135,20 +204,142 @@ body {
 
 
         &.classic {
-            background-color: rgb(241, 43, 43);
-            border: 2px black solid;
+            background-color: red;
             grid-row-start: 4;
-            grid-row-end: 6;
+            grid-row-end: 8;
+            margin: 20px;
+
+
+
+            &.one {
+                grid-column-start: 1;
+                grid-column-end: 4;
+                background-image: linear-gradient(red, yellow);
+
+
+
+
+                h2 {
+                    padding-left: 100px;
+
+                }
+
+                h2:hover {
+                    text-shadow: rgb(235, 220, 220) 2px 2px;
+
+                }
+
+                img {
+                    width: 30vw;
+                    height: 40vh;
+                    display: block;
+                    margin: auto;
+                    border-radius: 10px;
+                }
+
+                p {
+                    margin-left: 10%;
+                }
+            }
+
+            &.two {
+                grid-column-start: 4;
+                grid-column-end: 4;
+                grid-row-start: 4;
+                grid-row-end: 6;
+
+
+                img {
+                    width: 20vw;
+                    height: 30vh;
+                    display: block;
+                    margin: auto;
+                    border-radius: 10px;
+                }
+
+            }
+
+            &.three {
+                grid-column-start: 5;
+                grid-column-end: 7;
+                grid-row-start: 4;
+                grid-row-end: 6;
+
+                img {
+                    width: 20vw;
+                    height: 30vh;
+                    display: block;
+                    margin: auto;
+                    border-radius: 10px;
+                }
+
+            }
+
+            &.four {
+
+                grid-column-start: 4;
+                grid-column-end: 4;
+                grid-row-start: 6;
+                grid-row-end: 8;
+
+                img {
+                    width: 20vw;
+                    height: 30vh;
+                    display: block;
+                    margin: auto;
+                    border-radius: 10px;
+                }
+
+            }
+
+            &.five {
+                grid-column-start: 5;
+                grid-column-end: 7;
+                grid-row-start: 6;
+                grid-row-end: 8;
+
+                img {
+                    width: 20vw;
+                    height: 30vh;
+                    display: block;
+                    margin: auto;
+                    border-radius: 10px;
+                }
+
+            }
+
+            .hover {
+
+                &:hover {
+                    cursor: pointer;
+                    opacity: 0.7;
+                    text-shadow: rgb(255, 9, 9) 2px 2px;
+
+
+
+                }
+
+                img {
+                    border: 2px solid rgb(255, 3, 3);
+                }
+
+            }
+
 
 
 
 
         }
 
+
+
+
+
         &.multiplayer {
             background-color: rgb(194, 25, 143);
-            grid-row-start: 6;
-            grid-row-end: 9;
+            grid-row-start: 8;
+            grid-row-end: 10;
+
 
             &.one {
                 grid-column-start: 1;
@@ -158,10 +349,17 @@ body {
                     padding-left: 100px;
                     cursor: pointer;
 
+
                     &:hover {
                         text-shadow: rgb(243, 105, 255) 2px 2px;
+
                     }
                 }
+
+                p {
+                    margin-left: -50px;
+                }
+
 
 
             }
@@ -181,43 +379,38 @@ body {
 
 
             }
+
+            p {
+                padding-left: 170px;
+                cursor: pointer;
+                text-align: start;
+
+            }
+
             /*this is inorder to have the things change whenever i hover over them so the pic and text will change*/
-            .hover{
-                &:hover{
+            .hover {
+                &:hover {
                     cursor: pointer;
-                    opacity: 0.7;                  
+                    opacity: 0.7;
                     text-shadow: rgb(255, 123, 215) 2px 2px;
 
 
                 }
-            img {
 
-                width: 200px;
-                height: 20vh;
-                display: block;
-                margin: auto;
-                border-radius: 10px;
-                border: 2px solid rgb(247, 110, 206);
+                img {
 
-                /*&:hover {
-                    cursor: pointer;
-                    opacity: 0.7;
-                    border: 4px solid rgb(147, 253, 112);
-                    box-shadow: 2px 5px 2px rgb(94, 255, 0);
+                    width: 200px;
+                    height: 20vh;
+                    display: block;
+                    margin: auto;
+                    border-radius: 10px;
+                    border: 2px solid rgb(247, 110, 185);
 
 
-                }*/
+
+                }
 
             }
-            p{
-                padding-left:170px;
-                cursor:pointer;
-               /* &:hover{
-                    text-shadow: rgb(148, 255, 105) 2px 2px;
-
-                }*/
-            }
-        }
 
 
 
@@ -225,11 +418,5 @@ body {
         }
     }
 
-    .popular {
-        background-color: rgb(255, 133, 219);
-        border: 2px black solid;
-        grid-row-start: 9;
-        grid-row-end: 11;
 
-    }
 }
