--- a/01-HTML-CSS/07-SCSS/Shani/Game website/style.scss
+++ b/01-HTML-CSS/07-SCSS/Shani/Game website/style.scss
@@ -215,7 +215,7 @@ body {
                 grid-column-start: 1;
                 grid-column-end: 4;
                 background-image: linear-gradient(red, yellow);
-
+                
 
 
 
@@ -226,6 +226,7 @@ body {
 
                 h2:hover {
                     text-shadow: rgb(235, 220, 220) 2px 2px;
+                    cursor:pointer;
 
                 }
 
@@ -235,6 +236,7 @@ body {
                     display: block;
                     margin: auto;
                     border-radius: 10px;
+                    
                 }
 
                 p {
