--- a/01-HTML-CSS/07-SCSS/Lior_Krasnopolski/Gaming_Lior.scss
+++ b/01-HTML-CSS/07-SCSS/Lior_Krasnopolski/Gaming_Lior.scss
@@ -166,6 +166,12 @@ body
         }
         }
     }}
+
+    .price
+    {
+      font-size: 30px;
+      color: greenyellow;
+    }
     
 
 // Title of each gaming type
