--- a/01-HTML-CSS/07-SCSS/noa/hometask/game.scss
+++ b/01-HTML-CSS/07-SCSS/noa/hometask/game.scss
@@ -19,6 +19,11 @@ h1 {
     border-radius: 30px;
     border: 1px solid white;
 
+    &:hover{
+        transform: scale(1.2);
+        z-index: 1;
+        
+      }
 
     iframe {
         width: 100%;
