--- a/01-HTML-CSS/07-SCSS/tamir.work/style.scss
+++ b/01-HTML-CSS/07-SCSS/tamir.work/style.scss
@@ -4,7 +4,11 @@
     grid-template-rows: 10vh 35vh 35vh;
     grid-template-columns: repeat(4, 1fr);
     
-
+ .h1{
+    font-size: 100px;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    
+ }
 
     .title {
         grid-column: 1/6;
