--- a/01-HTML-CSS/07-SCSS/Lior_Krasnopolski/Gaming_Lior.scss
+++ b/01-HTML-CSS/07-SCSS/Lior_Krasnopolski/Gaming_Lior.scss
@@ -314,22 +314,50 @@ h4
         grid-row-start: 2;
         grid-row-end: 3;
 
+        :active
+        {
+          background: url(https://c.tenor.com/X_5vdWJEBYcAAAAC/assassins-creed-unity.gif);
+          background-repeat: no-repeat;
+          background-size: cover;        }
+
     }
   
     &_2
     {
         background: url(https://images3.alphacoders.com/843/thumbbig-843016.webp);
+        
+        :active
+        {
+          background: url(https://c.tenor.com/7xiGei5WC1AAAAAM/anger-rage.gif);
+          background-repeat: no-repeat;
+          background-size: cover;       
+         }
 
     }
     &_3
     {
         background: url(https://c4.wallpaperflare.com/wallpaper/374/201/282/soldiers-call-of-duty-call-of-duty-modern-warfare-ghost-cod6-2560x1440-architecture-modern-hd-art-wallpaper-preview.jpg);
-
+        background-repeat: no-repeat;
+        background-size: cover;  
+        
+        :active
+        {
+          background: url(https://c.tenor.com/mSygXLnH7cUAAAAS/dogearmy-dogecoin.gif);
+          background-repeat: no-repeat;
+          background-size: cover;        
+        }
     }
     &_4
     {
         background: url(https://images.unsplash.com/photo-1623476408624-721c9185d569?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTN8fHN0YXIlMjB3YXJzfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60);
 
+        
+        :active
+        {
+          background: url(https://c.tenor.com/6YFcZ8rEag0AAAAM/star-wars-jedi-fallen-order.gif);
+          background-repeat: no-repeat;
+          background-size: cover;        
+        }
     }
     &_5
     {
@@ -337,6 +365,12 @@ h4
         background-repeat: no-repeat;
         background-size: cover;
 
+        
+        :active
+        {
+          background: url(https://c.tenor.com/Ir65B6UgLvoAAAAM/aloy-horizon-zero-dawn.gif);
+          background-repeat: no-repeat;
+          background-size: cover;        }
     }
 
     &_6
@@ -346,6 +380,12 @@ h4
         background-size: cover;
 
 
+        
+        :active
+        {
+          background: url(https://c.tenor.com/X_5vdWJEBYcAAAAC/assassins-creed-unity.gif);
+          background-repeat: no-repeat;
+          background-size: cover;        }
     }
 
     &_7
@@ -354,6 +394,12 @@ h4
         background-repeat: no-repeat;
         background-size: cover;
     
+        
+        :active
+        {
+          background: url(https://c.tenor.com/X_5vdWJEBYcAAAAC/assassins-creed-unity.gif);
+          background-repeat: no-repeat;
+          background-size: cover;        }
     }
 
     &_8
@@ -362,6 +408,12 @@ h4
         background-repeat: no-repeat;
         background-size: cover;
     
+        
+        :active
+        {
+          background: url(https://c.tenor.com/X_5vdWJEBYcAAAAC/assassins-creed-unity.gif);
+          background-repeat: no-repeat;
+          background-size: cover;        }
     }
 
 
@@ -372,6 +424,12 @@ h4
       background-repeat: no-repeat;
       background-size: cover;
   
+      
+      :active
+      {
+        background: url(https://c.tenor.com/X_5vdWJEBYcAAAAC/assassins-creed-unity.gif);
+        background-repeat: no-repeat;
+        background-size: cover;      }
   }
   
   &_10
@@ -380,6 +438,12 @@ h4
       background-repeat: no-repeat;
       background-size: cover;
 
+      
+      :active
+      {
+        background: url(https://c.tenor.com/X_5vdWJEBYcAAAAC/assassins-creed-unity.gif);
+        background-repeat: no-repeat;
+        background-size: cover;      }
   }
 
   &_11
@@ -387,6 +451,14 @@ h4
       background: url(https://thumbs.dreamstime.com/b/johan-gustafsson-ice-hockey-goalie-25087868.jpg);
       background-repeat: no-repeat;
       background-size: cover;
+
+      
+      :active
+      {
+        background: url(https://c.tenor.com/X_5vdWJEBYcAAAAC/assassins-creed-unity.gif);
+        background-repeat: no-repeat;
+        background-size: cover;
+            }
   }
 
   &_12
@@ -394,13 +466,26 @@ h4
       background: url(https://wallpapercave.com/wp/wp3533995.jpg);
       background-repeat: no-repeat;
       background-size: cover;
-  }
+
+      
+      :active
+      {
+        background: url(https://c.tenor.com/X_5vdWJEBYcAAAAC/assassins-creed-unity.gif);
+        background-repeat: no-repeat;
+        background-size: cover;      }
+    }
   &_13
   {
       background: url(https://wallpapercave.com/wp/wp2454514.jpg);
       background-repeat: no-repeat;
       background-size: cover;
 
+      
+      :active
+      {
+        background: url(https://c.tenor.com/X_5vdWJEBYcAAAAC/assassins-creed-unity.gif);
+        background-repeat: no-repeat;
+      }
   }
   &_14
   {
@@ -408,6 +493,12 @@ h4
       background-repeat: no-repeat;
       background-size: cover;
 
+      
+      :active
+      {
+        background: url(https://c.tenor.com/X_5vdWJEBYcAAAAC/assassins-creed-unity.gif);
+        background-repeat: no-repeat;
+      }
   }
   &_15
   {
@@ -415,6 +506,12 @@ h4
       background-repeat: no-repeat;
       background-size: cover;
 
+      
+      :active
+      {
+        background: url(https://c.tenor.com/X_5vdWJEBYcAAAAC/assassins-creed-unity.gif);
+        background-repeat: no-repeat;
+      }
   }
 
   &_16
@@ -423,6 +520,12 @@ h4
       background-repeat: no-repeat;
       background-size: cover;
 
+      
+      :active
+      {
+        background: url(https://c.tenor.com/X_5vdWJEBYcAAAAC/assassins-creed-unity.gif);
+        background-repeat: no-repeat;
+      }
 
   }
 
@@ -431,7 +534,13 @@ h4
       background: url(https://c4.wallpaperflare.com/wallpaper/32/804/961/spirit-blossom-yasuo-yasuo-league-of-legends-league-of-legends-riot-games-hd-wallpaper-preview.jpg);
       background-repeat: no-repeat;
       background-size: cover;
-  
+
+      
+      :active
+      {
+        background: url(https://c.tenor.com/X_5vdWJEBYcAAAAC/assassins-creed-unity.gif);
+        background-repeat: no-repeat;
+      }
   }
 
 
@@ -442,6 +551,12 @@ h4
     background-repeat: no-repeat;
     background-size: cover;
 
+    
+    :active
+    {
+      background: url(https://c.tenor.com/X_5vdWJEBYcAAAAC/assassins-creed-unity.gif);
+      background-repeat: no-repeat;
+    }
 }
 
 &_19
@@ -450,6 +565,12 @@ h4
     background-repeat: no-repeat;
     background-size: cover;
 
+    
+    :active
+    {
+      background: url(https://c.tenor.com/X_5vdWJEBYcAAAAC/assassins-creed-unity.gif);
+      background-repeat: no-repeat;
+    }
 }
 
 &_20
@@ -457,20 +578,41 @@ h4
     background: url(https://wallpapercave.com/wp/wp8386786.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-}
+
+    
+    :active
+    {
+      background: url(https://c.tenor.com/X_5vdWJEBYcAAAAC/assassins-creed-unity.gif);
+      background-repeat: no-repeat;
+    }
+  }
 
 &_21
 {
     background: url(https://wallpapercave.com/dwp1x/wp6311484.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-}
+
+    
+    :active
+    {
+      background: url(https://c.tenor.com/X_5vdWJEBYcAAAAC/assassins-creed-unity.gif);
+      background-repeat: no-repeat;
+    }
+
+  }
 &_22
 {
     background: url(https://wallpapercave.com/fuwp/uwp465651.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
 
+    
+    :active
+    {
+      background: url(https://c.tenor.com/X_5vdWJEBYcAAAAC/assassins-creed-unity.gif);
+      background-repeat: no-repeat;
+    }
 }
 &_23
 {
@@ -478,6 +620,12 @@ h4
     background-repeat: no-repeat;
     background-size: cover;
 
+    
+    :active
+    {
+      background: url(https://c.tenor.com/X_5vdWJEBYcAAAAC/assassins-creed-unity.gif);
+      background-repeat: no-repeat;
+    }
 }
 &_24
 {
@@ -485,6 +633,12 @@ h4
     background-repeat: no-repeat;
     background-size: cover;
 
+    
+    :active
+    {
+      background: url(https://c.tenor.com/X_5vdWJEBYcAAAAC/assassins-creed-unity.gif);
+      background-repeat: no-repeat;
+    }
 }
 
     
