--- a/01-HTML-CSS/08-Responsive/Room 1/style.scss
+++ b/01-HTML-CSS/08-Responsive/Room 1/style.scss
@@ -12,7 +12,7 @@ body {
         position: relative;
         width: 20vw;
         height: 20vh;
-        border: 1px solid red;
+        border: 1px solid rgb(130, 90, 138);
     }
 }
 
@@ -32,7 +32,7 @@ body {
     .wrapper {
         background-color: rgb(0, 255, 13);
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(6, 1fr);
     }
 
@@ -41,7 +41,7 @@ body {
     .wrapper {
         background-color: rgb(255, 0, 0);
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(1, 1fr);
         grid-template-rows: repeat(8, 1fr);
     }
 
