--- a/01-HTML-CSS/08-Responsive/Andrew/02/style.scss
+++ b/01-HTML-CSS/08-Responsive/Andrew/02/style.scss
@@ -3,6 +3,9 @@ body{
 }
 .grid{
     display: grid;
+    padding-inline: 10vw;
+    justify-content: center;
+    align-content: center;
     grid-template-columns: repeat(4, 1fr);
     gap: 40px;
     @media only screen and (max-width: 1800px) {
