--- a/01-HTML-CSS/07-SCSS/Gaming-Website(Rasheed)/style.scss
+++ b/01-HTML-CSS/07-SCSS/Gaming-Website(Rasheed)/style.scss
@@ -11,6 +11,9 @@ body {
     background-color: rgb(143, 138, 138);
     margin: 30px 50px;
     line-height: 1.4;
+   
+    
+    
     
 }
 
@@ -28,7 +31,7 @@ body {
 }
 
 img {
-    width: 100%;
+    max-width: 100%;
     border-radius: 20px;
 }
 
@@ -36,6 +39,7 @@ img {
 .wrapper {
     display: grid;
     grid-gap: 20px;
+    
 
 }
 
@@ -275,6 +279,12 @@ footer {
 }
 
 @media only screen and (max-width: 600px) {
+    body{
+        margin: 0;
+        border: solid transparent 2px;
+
+    }
+    
     
     .top-container {
         grid-template-areas:
