--- a/01-HTML-CSS/07-SCSS/Lior_Krasnopolski/Gaming_Lior.scss
+++ b/01-HTML-CSS/07-SCSS/Lior_Krasnopolski/Gaming_Lior.scss
@@ -383,7 +383,7 @@ h4
         
         :active
         {
-          background: url(https://c.tenor.com/X_5vdWJEBYcAAAAC/assassins-creed-unity.gif);
+          background: url(https://media3.giphy.com/media/H7Ne5EbNqqdGeIIEWd/100.webp?cid=ecf05e47kkey2acipjj6km7klb3wria6xyjrtfauy0uzad4y&rid=100.webp&ct=g);
           background-repeat: no-repeat;
           background-size: cover;        }
     }
@@ -397,7 +397,7 @@ h4
         
         :active
         {
-          background: url(https://c.tenor.com/X_5vdWJEBYcAAAAC/assassins-creed-unity.gif);
+          background: url(https://media2.giphy.com/media/8AgHUG7c2OTmYp7Oyx/200w.webp?cid=ecf05e479tlu8fpfkzb04wi4nu78t4rmlxnw21cx04cd2o2e&rid=200w.webp&ct=g);
           background-repeat: no-repeat;
           background-size: cover;        }
     }
@@ -411,7 +411,7 @@ h4
         
         :active
         {
-          background: url(https://c.tenor.com/X_5vdWJEBYcAAAAC/assassins-creed-unity.gif);
+          background: url(https://c.tenor.com/OBzcMBeR5xcAAAAd/scared-skydive.gif);
           background-repeat: no-repeat;
           background-size: cover;        }
     }
@@ -427,7 +427,7 @@ h4
       
       :active
       {
-        background: url(https://c.tenor.com/X_5vdWJEBYcAAAAC/assassins-creed-unity.gif);
+        background: url(https://media2.giphy.com/media/2zbmIjWXTCGeOz8JDn/200w.webp?cid=ecf05e47ncvoewdupw9cgi70c3oh0xpoc6wry74w1a9f6a3w&rid=200w.webp&ct=g);
         background-repeat: no-repeat;
         background-size: cover;      }
   }
@@ -441,7 +441,7 @@ h4
       
       :active
       {
-        background: url(https://c.tenor.com/X_5vdWJEBYcAAAAC/assassins-creed-unity.gif);
+        background: url(https://media0.giphy.com/media/c01p98wQAmfX0v68Z2/200w.webp?cid=ecf05e47c7xj2bia1su3dxt49db8r09oo06gpqnprafhrdo7&rid=200w.webp&ct=g);
         background-repeat: no-repeat;
         background-size: cover;      }
   }
@@ -455,7 +455,7 @@ h4
       
       :active
       {
-        background: url(https://c.tenor.com/X_5vdWJEBYcAAAAC/assassins-creed-unity.gif);
+        background: url(https://media4.giphy.com/media/52jAXM8tC1uTEqTWQy/200w.webp?cid=ecf05e473nbvocfh19ifhivyhe0tygmaoz9cdqzyuuw7kgtz&rid=200w.webp&ct=g);
         background-repeat: no-repeat;
         background-size: cover;
             }
@@ -470,7 +470,7 @@ h4
       
       :active
       {
-        background: url(https://c.tenor.com/X_5vdWJEBYcAAAAC/assassins-creed-unity.gif);
+        background: url(hhttps://c.tenor.com/wE2f0w-h6-EAAAAM/princess-peach-mario-sports-superstars.gif);
         background-repeat: no-repeat;
         background-size: cover;      }
     }
@@ -483,9 +483,9 @@ h4
       
       :active
       {
-        background: url(https://c.tenor.com/X_5vdWJEBYcAAAAC/assassins-creed-unity.gif);
+        background: url(https://c.tenor.com/RiJVnma5zrUAAAAM/the-masters-rory-mcilroy.gif);
         background-repeat: no-repeat;
-      }
+        background-size: cover;      }
   }
   &_14
   {
@@ -496,9 +496,9 @@ h4
       
       :active
       {
-        background: url(https://c.tenor.com/X_5vdWJEBYcAAAAC/assassins-creed-unity.gif);
+        background: url(https://c.tenor.com/cIVRP8-42jUAAAAM/nomar-mazara-texas-rangers.gif);
         background-repeat: no-repeat;
-      }
+        background-size: cover;      }
   }
   &_15
   {
@@ -509,9 +509,9 @@ h4
       
       :active
       {
-        background: url(https://c.tenor.com/X_5vdWJEBYcAAAAC/assassins-creed-unity.gif);
+        background: url(https://media1.giphy.com/media/dB5s4Qbr3j59WOmRRd/200w.webp?cid=ecf05e47s2pa5d2556mtdfoaed66axt1tfby6mnpedu5c8zj&rid=200w.webp&ct=g);
         background-repeat: no-repeat;
-      }
+        background-size: cover;      }
   }
 
   &_16
@@ -523,8 +523,9 @@ h4
       
       :active
       {
-        background: url(https://c.tenor.com/X_5vdWJEBYcAAAAC/assassins-creed-unity.gif);
+        background: url(https://media3.giphy.com/media/H1bKt3Vv6aZaXFLedo/200w.webp?cid=ecf05e47u5h5lbide0bo1b4ag6pkedw89w6eu01ajsw4gjcy&rid=200w.webp&ct=g);
         background-repeat: no-repeat;
+        background-size: cover;
       }
 
   }
@@ -538,8 +539,9 @@ h4
       
       :active
       {
-        background: url(https://c.tenor.com/X_5vdWJEBYcAAAAC/assassins-creed-unity.gif);
+        background: url(https://c.tenor.com/4V2-UCVfPbIAAAAM/jinx-jinx-arcane.gif);
         background-repeat: no-repeat;
+        background-size: cover;
       }
   }
 
@@ -554,8 +556,10 @@ h4
     
     :active
     {
-      background: url(https://c.tenor.com/X_5vdWJEBYcAAAAC/assassins-creed-unity.gif);
+      background: url(https://c.tenor.com/Q9c3vS96jjIAAAAS/one-tap-headshot.gif);
       background-repeat: no-repeat;
+      background-size: cover;
+
     }
 }
 
@@ -568,8 +572,9 @@ h4
     
     :active
     {
-      background: url(https://c.tenor.com/X_5vdWJEBYcAAAAC/assassins-creed-unity.gif);
+      background: url(https://c.tenor.com/giqgLv8HlEMAAAAM/fortnite-high-five.gif);
       background-repeat: no-repeat;
+      background-size: cover;
     }
 }
 
@@ -582,8 +587,9 @@ h4
     
     :active
     {
-      background: url(https://c.tenor.com/X_5vdWJEBYcAAAAC/assassins-creed-unity.gif);
+      background: url(https://c.tenor.com/Yu3s9sNqxSMAAAAS/fuse-apex-apex-fuse.gif);
       background-repeat: no-repeat;
+      background-size: cover;
     }
   }
 
@@ -596,8 +602,9 @@ h4
     
     :active
     {
-      background: url(https://c.tenor.com/X_5vdWJEBYcAAAAC/assassins-creed-unity.gif);
+      background: url(https://c.tenor.com/EK0I5RFnbt0AAAAM/pubg.gif);
       background-repeat: no-repeat;
+      background-size: cover;
     }
 
   }
@@ -610,8 +617,9 @@ h4
     
     :active
     {
-      background: url(https://c.tenor.com/X_5vdWJEBYcAAAAC/assassins-creed-unity.gif);
+      background: url(https://c.tenor.com/uyJM-N1mHDMAAAAM/minecraft-ruse-minecraft.gif);
       background-repeat: no-repeat;
+      background-size: cover;
     }
 }
 &_23
@@ -623,8 +631,9 @@ h4
     
     :active
     {
-      background: url(https://c.tenor.com/X_5vdWJEBYcAAAAC/assassins-creed-unity.gif);
+      background: url(https://c.tenor.com/3psJFFIAI70AAAAM/kripp-kripparian.gif);
       background-repeat: no-repeat;
+      background-size: cover;
     }
 }
 &_24
@@ -636,8 +645,9 @@ h4
     
     :active
     {
-      background: url(https://c.tenor.com/X_5vdWJEBYcAAAAC/assassins-creed-unity.gif);
+      background: url(https://c.tenor.com/R8ARuOIxLmoAAAAM/creative-dota2.gif);
       background-repeat: no-repeat;
+      background-size: cover;
     }
 }
 
